frontend madness: fix speaker z-index

--- a/mad_fe/dev/styl/speaker.styl
+++ b/mad_fe/dev/styl/speaker.styl
@@ -4,18 +4,15 @@
     border-radius 50%
     overflow hidden
     border 6px solid white
-    box-shadow inset 0 0 10px #000000
-
+    z-index 1
 
 .speaker__photo
     position absolute
-    z-index -1
     width 100%
     height auto
 
 .speaker__info
     absolute bottom 0
-    z-index -1
     width 100%
     height 90px
     background rgba($base-color, 80%)
@@ -31,7 +28,6 @@
     font-size 14px
     line-height 1.2
     font-weight normal
-
 
 .speaker .speaker__info
     transform translate(0%, 100%)
